--- a/.nx/workflows/agents.yaml
+++ b/.nx/workflows/agents.yaml
@@ -27,7 +27,7 @@ launch-templates:
       - name: Install e2e deps
         script: |
           sudo apt-get update
-          sudo apt-get install -y ca-certificates lsof
+          sudo apt-get install -y ca-certificates lsof libvips-dev libglib2.0-dev libgirepository1.0-dev
       - name: Install Pnpm
         script: |
           npm install -g pnpm@8.15.5
