--- a/package.json
+++ b/package.json
@@ -102,10 +102,11 @@
     "@supabase/supabase-js": "^2.26.0",
     "@svgr/rollup": "^8.1.0",
     "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "1.8.0",
+    "@swc-node/register": "~1.9.1",
     "@swc/cli": "0.3.12",
-    "@swc/core": "^1.3.85",
-    "@swc/jest": "^0.2.20",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@swc/jest": "~0.2.36",
     "@testing-library/react": "15.0.6",
     "@types/cytoscape": "^3.18.2",
     "@types/detect-port": "^1.3.2",
@@ -311,7 +312,6 @@
     "@markdoc/markdoc": "0.2.2",
     "@monaco-editor/react": "^4.4.6",
     "@napi-rs/canvas": "^0.1.19",
-    "@swc/helpers": "~0.5.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "0.5.7",
