--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -289,9 +289,10 @@ jobs:
         # Publish docs only on a full release
         if: ${{ !github.event.release.prerelease }}
         run: |
-          # The GITHUB_REF_NAME is a full version (i.e. 17.3.2). The branchName will only use the major version number.
-          # We will publish docs to the website branch based on the current tag (i.e. website-17)
-          branchName=website-${GITHUB_REF_NAME%.*.*}
+          # The GITHUB_REF_NAME is a full version (i.e. 17.3.2). The branchName will strip the patch version number.
+          # We will publish docs to the website branch based on the current tag (i.e. website-17.3)
+          branchName=website-${GITHUB_REF_NAME%.*}
+          echo Publishing docs site for $GITHUB_REF_NAME to $branchName
           # We force recreate the branch in order to always be up to date and avoid merge conflicts within the automated workflow
           git branch -f $branchName
           git push -f origin $branchName
